Revert Utils.toUnmodifiableList changes from r19101 (see #23717, patch by GerdP, modified with extra context)
git-svn-id: https://josm.openstreetmap.de/svn/trunk@19102 0c6e7542-c601-0410-84e7-c038aed88b3b